--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   agora_rtc_engine: ^6.1.0
   permission_handler: ^10.2.0
   agora_uikit: ^1.3.1
+  animated_text_kit: ^4.2.2
 
 
 dev_dependencies:
